Implement timesheets and expenditures models
