# api/swagger/api.yml
@@ -400,7 +400,6 @@ paths:
 
   /timesheets:
     get:
-      deprecated: True
       description: |
         Get timesheets of object
       operationId: wt.http_api.issues.get_issue_timesheets
@@ -430,7 +429,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
     post:
-      deprecated: True
       description: |
         Add new timesheet to object
       operationId: wt.http_api.issues.post_issue_timesheet
@@ -443,7 +441,7 @@ paths:
               $ref: '#/components/schemas/TimesheetRequest'
       responses:
         '201':
-          description: Issue
+          description: Timesheet id
           content:
             application/json:
               schema:
@@ -465,7 +463,6 @@ paths:
 
   /timesheets/{timesheet_id}:
     delete:
-      deprecated: True
       description: |
         Delete timesheet
       operationId: wt.http_api.timesheets.delete_timesheet
@@ -491,7 +488,6 @@ paths:
 
   /expenditures:
     get:
-      deprecated: True
       description: |
         Get expenditures of object
       operationId: wt.http_api.issues.get_issue_expenditures
@@ -522,7 +518,6 @@ paths:
                 $ref: '#/components/schemas/Error'
 
     post:
-      deprecated: True
       description: |
         Add new expenditure to object
       operationId: wt.http_api.issues.post_issue_expenditure
@@ -537,7 +532,7 @@ paths:
               $ref: '#/components/schemas/ExpenditureRequest'
       responses:
         '201':
-          description: Expenditure
+          description: Expenditure id
           content:
             application/json:
               schema:
@@ -559,7 +554,6 @@ paths:
 
   /expenditures/{expenditure_id}:
     delete:
-      deprecated: True
       description: |
         Delete expenditure
       operationId: wt.http_api.expenditures.delete_expenditure
@@ -744,17 +738,17 @@ components:
     TimesheetRequest:
       type: object
       required:
-        - issue
+        - timesheet
       properties:
-        issue:
+        timesheet:
           $ref: '#/components/schemas/NewTimesheet'
 
     ExpenditureRequest:
       type: object
       required:
-        - issue
+        - expenditure
       properties:
-        issue:
+        expenditure:
           $ref: '#/components/schemas/NewExpenditure'
 
     ProjectsResponse:
@@ -1026,14 +1020,14 @@ components:
     BaseTimesheet:
       type: object
       required:
-        - name
+        - description
         - date_opened
         - duration
       properties:
-        name:
+        description:
           type: string
           example: 'Timesheet'
-          maxLength: 100
+          maxLength: 256
         date_opened:
           type: string
           format: date-time
@@ -1074,7 +1068,7 @@ components:
         name:
           type: string
           example: 'Expenditure'
-          maxLength: 100
+          maxLength: 256
         date_opened:
           type: string
           format: date-time
@@ -1114,6 +1108,8 @@ components:
           description: Description of deliverable
         files:
           $ref: "#/components/schemas/Files"
+        cost:
+          $ref: "#/components/schemas/Money"
 
     Money:
       type: object
